[features/twitter-sso][ADD] twitter sso and doc
