# apps/api/src/entities/auth/sso/twitter/twitter.routes.ts
@@ -1,0 +1,11 @@
+import { Router } from 'express';
+import TwitterController from './twitter.controller';
+import { verifyToken } from '../../../../tools/auth.tools';
+
+const TwitterRouter = Router();
+
+TwitterRouter.get('/login', TwitterController.getCode);
+
+TwitterRouter.get('/callback', verifyToken, TwitterController.getToken);
+
+export default TwitterRouter;
