# apps/api/src/entities/openapi.index.json
@@ -23,6 +23,12 @@
     "/auth/sso/google/callback": {
       "$ref": "./auth/sso/google/google.path.json#/callback"
     },
+    "/auth/sso/twitter/login": {
+      "$ref": "./auth/sso/twitter/twitter.path.json#/login"
+    },
+    "/auth/sso/twitter/callback": {
+      "$ref": "./auth/sso/twitter/twitter.path.json#/callback"
+    },
     "/data/stats": {
       "$ref": "./data/data.path.json#/stats"
     },
@@ -61,6 +67,9 @@
       },
       "GoogleCallbackResponse": {
         "$ref": "./auth/sso/google/google.components.json#/schemas/GoogleCallbackResponse"
+      },
+      "TwitterCallbackResponse": {
+        "$ref": "./auth/sso/twitter/twitter.components.json#/schemas/TwitterCallbackResponse"
       }
     }
   }
